# wine-pairing-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements copy.txt
agents/: __init__.py  food_agent.py  sommelier_agent.py  wine_agent.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py  cocrossattention.py
app/nodes/: __init__.py  explanation_node.py  pairing_model_node.py  recipe_encoder_node.py  score_node.py  wine_encoder_node.py  wine_retrieval_node.py
app/services/: __init__.py  embedding_service.py  pairing_model_service.py  wine_search_service.py
app/states/: __init__.py  recommend_state.py  score_state.py
app/workflows/: __init__.py  recommend_wine_graph.py  score_pairing_graph.py
graph/: checkpoint.py  router.py  state.py  workflow.py
memory/: __init__.py  postgres_memory.py  redis_memory.py
models/: __init__.py  cocrossattention.py  triplet_model.py  vae_encoder.py
nodes/: __init__.py  evaluate_node.py  explanation_node.py  intent_node.py  output_node.py  pairing_node.py  retrieve_node.py  skill_node.py
prompts/: __init__.py  explanation_prompt.py  intent_prompt.py  recommendation_prompt.py  score_prompt.py
scripts/: evaluate_excel_pairings.py
services/: embedding_service.py  llm_service.py  rerank_service.py  skill_service.py
skills/wine-pairing-anti/: SKILL.md
skills/wine-pairing-cheese/: SKILL.md
skills/wine-pairing-desserts/: SKILL.md
tests/: test_skill_service.py  test_wine_rules.py  test_workflow_imports.py
tools/: __init__.py  recipe_db_tool.py  sql_tool.py  vector_search.py  wine_db_tool.py
(+33 files in other folders)
