[project]
name = "wine-pairing-agent"
version = "0.1.0"
description = "LangGraph AI agent that recommends wine pairings for recipes using MiniMax."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0",
  "langchain-openai>=1.0",
  "pydantic>=2.0",
]

[project.scripts]
wine-pairing-agent = "app.main:main"

[tool.setuptools.packages.find]
include = [
  "app",
  "graph",
  "nodes",
  "agents",
  "tools",
  "models",
  "prompts",
  "services",
  "memory",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
